Completed exercise: Reviewed and modified Tweeter web client to enhance appearance and functionality for desktop screen sizes. Ensured that the application aligns with the provided design requirements. Implemented necessary CSS adjustments and layout modifications to improve the user experience on desktop screens.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -31,26 +31,4 @@ header {
     height: auto; 
   } 
 
-
-  main {
-    width: 50%;
-    margin-top: 205px;
-    margin-right: 50px;
-    float: right;
-    
-  }
-
-  nav {
-    position: fixed;
-    height: 120px;
-    width: 100%; 
-    background-image: none;
-    background-color: #4056A1; 
-    color: #FFFFFF; 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 1.5em; 
-  }
-
 }
